test/src/e2e_vm_tests/test_programs/should_fail/language/reexport/aliases/src/lib_4_1.sw
library;

pub use ::items_4::Items4_Struct as Alias4_Struct;

pub use ::items_4::Items4_Enum as Alias4_Enum;

pub use ::items_4::Items4_Variants::S as Alias4_S;
pub use ::items_4::Items4_Variants::T as Alias4_T;

pub use ::items_4::ITEMS_4_FUNCTION_RES as ALIAS_4_FUNCTION_RES;

pub use ::items_4::items_4_function as alias_4_function;

pub use ::items_4::Items4Trait as Alias4Trait;
